- make clean now deletes the executable as well as the *.o files
- added a file called bugs that has a list of bugs in it
- updated some input files