@@ -1,5 +1,1 @@
-README
-    Wayafeel is a word creation program. It basically takes phonemes and joins them together to create new and unique words. The files in data/phoneme have lists of which phonemes go together to create pronounceable words, however this still needs some fine tuning. The files in data/grapheme have lists of possible graphemes for each phoneme, but this is still pretty useless.
-
-CHANGELOG v 0.3
-	- Draft of phoneme input files finished
+This is the unstable branch of Wayafeel. It's where all the cool kids hang out.
