@@ -1,2 +1,1 @@
-- Unexplained segfaults on certain seeds e.g. 888
-- Command line arguments don't support negative numbers.
+- Unexplained segfaults on certain seeds e.g. 888, 38
